Bug 247214 - no alphabetical order in "switch application language"
Summary: no alphabetical order in "switch application language"
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-10 10:17 UTC by Lukas Sommer
Modified: 2011-06-10 16:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.1
Sentry Crash Report:


Attachments
snapshot.png (663.47 KB, image/png)
2010-08-10 10:20 UTC, Lukas Sommer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas Sommer 2010-08-10 10:17:18 UTC
Version:           unspecified (using KDE 4.3.5) 
OS:                Linux

It is quite uncomfortable to switch the application language.

Reproducible: Didn't try

Steps to Reproduce:
Call "Help"->"Switch application language..." in a KDE program.

Actual Results:  
When you want to change the language, you get a very long list of available languages - but in random order.

Expected Results:  
The list of languages should have alphabetical order.
Comment 1 Lukas Sommer 2010-08-10 10:20:32 UTC
Created attachment 49962 [details]
snapshot.png
Comment 2 Christoph Feck 2010-08-10 14:34:09 UTC
Hm, actually I wonder why it shows so many languages, I don't think you have installed all of them? On my self compiled KDE from trunk, it does not show all languages, just "American English".
Comment 3 Christoph Feck 2010-08-11 03:27:02 UTC
SVN commit 1161872 by cfeck:

Fix insertation in default (alphabetical) order

CCBUG: 247214


 M  +2 -2      klanguagebutton.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1161872
Comment 4 Christoph Feck 2010-08-11 03:28:51 UTC
SVN commit 1161874 by cfeck:

Fix insertation in default (alphabetical) order (backport r1161872)

BUG: 247214
FIXED-IN: 4.5.1


 M  +2 -2      klanguagebutton.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1161874
Comment 5 Lukas Sommer 2010-08-11 09:51:33 UTC
Thanks a lot for this very fast fix!

(In the case of digikam, I have so many languages installed because I didn't use the digikam package of my distribution openSUSE 11.2, but a newer digikam package from the build service, and this comes with "digikam-lang" which provides the updated translations.)