Fix insertation in default (alphabetical) order (backport r1161872)

BUG: 247214
FIXED-IN: 4.5.1

svn path=/branches/KDE/4.5/kdelibs/; revision=1161874